

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:background="@color/backgroundMain"
   android:gravity="center"
   android:padding="30dip">
   <TextView
      android:text="@string/name"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:layout_marginBottom="25dip"
      android:textSize="24.5sp" />
   
      <Button
       android:id="@+id/about_buttom"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/about" 
       android:onClick="onAboutMeButton" />
      
   <Button
       android:id="@+id/sudoku_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/sudoku_label" 
       android:onClick="start_sudoku" />

   <Button
       android:id="@+id/create_error_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/create_error_label" 
       android:onClick="OnCreateErrorButtonClicked" />
   
      <Button
       android:id="@+id/exit_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/exit_label" 
       android:onClick="exit" />

</LinearLayout>