 <RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"   android:layout_width="fill_parent"   android:layout_height="fill_parent"    android:background="@color/backgroundMain" 	tools:context="edu.neu.madcourse.luislopez.AboutMeActivity"> 

    <ImageView        android:layout_centerHorizontal="true"
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/buceo2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        android:textColor="#000000"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/year" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/degree" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/phone_id" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"        android:textColor="#000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >
    </TextView>

</RelativeLayout>